# ClipGoblin

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  bump-version.ps1  eslint.config.js  index.html  package-lock.json  package.json  patch-no-window.ps1  replace-curl-with-reqwest.ps1  vite.config.ts
.claude/: SESSION_HANDOFF.md  launch.json
.claude/plans/: 2026-06-14-detection-calibration-layer1.md  2026-06-23-byok-ai-cost.md
.claude/specs/: 2026-06-14-detection-ai-clip-judge-design.md  2026-06-14-detection-calibration-design.md
.github/workflows/: autofix.yml  release.yml  triage.yml
.tauri/: clipgoblin.key  clipgoblin.key.pub
ai_engine/: transcribe.py
config/: caption_templates.toml
docs/: BUILD_ROADMAP_2026-07.md  CNAME  DISCORD_POST_TEMPLATE.md  PHASE12_PROMPT_DIFF.md  ROADMAP.md  UI_AUDIT_2026-07.md  download.html  index.html  privacy.html  terms.html
docs/callback/: index.html
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/games/: _cozy.toml  _fps.toml  _horror.toml  _known_games.toml  _rpg.toml  _strategy.toml  _talking.toml  dead_by_daylight.toml  default.toml  stardew_valley.toml  valorant.toml
src-tauri/icons/: icon.icns
src-tauri/src/: ai_provider.rs  ai_usage.rs  audio_signal.rs  auth_proxy.rs  bin_manager.rs  boundary_learning.rs  cam_region.rs  clip_fusion.rs  clip_judge.rs  clip_labeler.rs  clip_output.rs  clip_ranker.rs  clip_selector.rs  crypto.rs  db.rs  emote_signal.rs  engine.rs  error.rs  external_sources.rs  frame_sampler.rs  game_config.rs  hardware.rs  integration_test.rs  job_queue.rs  lib.rs  log_scrubber.rs  personalization.rs  pipeline.rs  post_captions.rs  recorders.rs  scene_signal.rs  signal_calibration.rs  transcript_signal.rs  twitch.rs  twitch.rs.bak  twitch_chat_replay.rs  vertical_crop.rs  vision_signal.rs  whisper.rs
src-tauri/src/commands/: auth.rs  binaries.rs  bug_report.rs  cam_region.rs  captions.rs  clip.rs  export.rs  mod.rs  model.rs  montage.rs  scheduled.rs  settings.rs  social.rs  sources.rs  vod.rs
src-tauri/src/detection/: mod.rs  ranker.rs
src-tauri/src/social/: instagram.rs  mod.rs  tiktok.rs  youtube.rs
tests/: aiFallbackNotice.test.ts  captionStyles.test.ts  clipReview.test.ts  clipSources.test.ts  contextFit.test.ts  dashboardInbox.test.ts  detectionCostConsent.test.ts  editorCaptions.test.ts  editorWorkspace.test.ts  externalSources.test.ts  facecam.test.ts  layoutModes.test.ts  montage.test.ts  platformUpload.test.ts  publishCopyQuality.test.ts  settingsNavigation.test.ts  subtitleUtils.test.ts  tiktokCompliance.test.ts  twitchProvenance.test.ts  vodActions.test.ts
tools/: generate_caption_fonts.py  render_caption_font_specimens.py
worker/: package.json  wrangler.toml
(+107 files in other folders)
