[package]
name = "clipviral"
version = "1.1.0"
description = "AI-powered Twitch stream clip generator"
authors = ["ClipViral"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "native-tls"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
glob = "0.3"
dirs = "6.0"
base64 = "0.22"
once_cell = "1"
which = "7"
async-trait = "0.1"
dotenvy = "0.15"
sha2 = "0.10"
regex = "1"
whisper-rs = { version = "0.16" }
num_cpus = "1"
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
tauri-plugin-updater = { version = "2", optional = true }
steamworks = { version = "0.11", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }

[features]
default = ["asset-protocol", "standalone", "cuda"]
asset-protocol = ["tauri/protocol-asset"]
standalone = ["tauri-plugin-updater"]
steam = ["steamworks"]
cuda = ["whisper-rs/cuda"]
